--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ url: "" # the base hostname & protocol for your site, e.g. https://amenatis.gith
 github_username:  amenatis
 
 # Build settings
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
 
